[package]
name = "rust-grim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.1", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
tempfile = "3"
rayon = "1.10.0"
png = "0.17.11"
fast_image_resize = "5.3.0"
